# duck_it

./: LICENSE  README.md  pyproject.toml
duckgo/: __init__.py  types.py
tests/: test_image.py  test_web.py
