[tool.poetry]
name = "duckgo"
version = "0.0.0"
description = "Search DuckDuckGo for websites, images, etc."
authors = ["Wanasit T"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
